BUG: right side of map pin icon is cropped

--- a/src/routes/AssignmentPage/components/Map.less
+++ b/src/routes/AssignmentPage/components/Map.less
@@ -20,7 +20,8 @@
   height: @markerHeight;
   font-size: @markerHeight;
   line-height: @markerHeight;
-  color: @white;
+  background-size: contain;
+  background-repeat: no-repeat;
 
   &:before {
     content: '_';
